--- a/Astro/invite.html
+++ b/Astro/invite.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Support - Astro</title>
-  <meta HTTP-EQUIV="REFRESH" content="0; url=https://discord.gg/7yZqHfG">
-  <link rel="canonical" href="https://discord.gg/7yZqHfG" />
-  <meta name="description" content="Join the support server for Astro">
+  <title>Invite - Astro</title>
+  <meta HTTP-EQUIV="REFRESH" content="0; url=https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&redirect_uri=https%3A%2F%2Fastrobot.carrd.co%2F&response_type=code&scope=bot%20identify">
+  <link rel="canonical" href="" />
+  <meta name="description" content="Invite Link for Astro Bot">
   <meta name="keywords" content="Astro, discord, bot, server, guild, invite">
   <meta name="msapplication-TileColor" content="#307EC4">
   <meta content="https://asksirk.com/Astro/astronaut.jpg" property="og:image">
 </head>
 <body>
-  <a href="https://discord.gg/7yZqHfG">Click here if you are not redirected automatically.</a></body>
+  <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&redirect_uri=https%3A%2F%2Fastrobot.carrd.co%2F&response_type=code&scope=bot%20identify">Click here if you are not redirected automatically.</a></body>
 </html>
