--- a/Astro/invite.html
+++ b/Astro/invite.html
@@ -6,7 +6,7 @@
   <meta HTTP-EQUIV="REFRESH" content="0; url=https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&redirect_uri=https%3A%2F%2Fastrobot.carrd.co%2F&response_type=code&scope=bot%20identify">
   <link rel="canonical" href="" />
   <meta name="description" content="Invite Link for Astro Bot">
-  <meta name="keywords" content="Astro, discord, bot, server, guild, invite">
+  <meta name="keywords" content="Astro, discord, bot, python, server, guild, invite">
   <meta name="msapplication-TileColor" content="#307EC4">
   <meta content="https://asksirk.com/Astro/astronaut.jpg" property="og:image">
 </head>
