--- a/Astro/invite.html
+++ b/Astro/invite.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="" />
   <meta name="description" content="Invite Link for Astro Bot">
   <meta name="keywords" content="Astro, discord, bot, python, server, guild, invite">
-  <meta name="msapplication-TileColor" content="#307EC4">
+  <meta name="msapplication-TileColor" content="#5E6C86">
   <meta content="https://asksirk.com/Astro/astronaut.jpg" property="og:image">
 </head>
 <body>
