--- a/Astro/github.html
+++ b/Astro/github.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://discord.gg/7yZqHfG" />
   <meta name="description" content="Github repository for Astro.">
   <meta name="keywords" content="Astro, discord, github, bot, server, guild, invite">
-  <meta name="msapplication-TileColor" content="#307EC4">
+  <meta name="msapplication-TileColor" content="#5E6C86">
   <meta content="https://asksirk.com/Astro/astronaut.jpg" property="og:image">
 </head>
 <body>
