--- a/Astro/index.html
+++ b/Astro/index.html
@@ -7,7 +7,7 @@
 <title>Astro - Discord Bot</title>
 <meta name="description" content="Astro, a simple, easy to use, Discord Bot made to make your use of discord easy.">
   <meta name="keywords" content="Astro, discord, github, bot, server, guild, invite">
-  <meta name="msapplication-TileColor" content="#5E6C86">
+  <meta name="theme-color" content="#5E6C86">
   <meta content="https://asksirk.com/Astro/astronaut.jpg" property="og:image">
 </head>
 <body style="font-family: gamefont;">
