--- a/Astro/index.html
+++ b/Astro/index.html
@@ -28,6 +28,7 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
+    <script src="https://fmt6038877z9.statuspage.io/embed/script.js"></script>
 <br><br>
 <center>
     <img src="astronaut.jpg" height="300" width="300">
