--- a/lite/index.html
+++ b/lite/index.html
@@ -3,8 +3,11 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="bluemask1.png">
-<title>Lite Bot</title>
+    href="/astro/sirk.png">
+<title>Sirk Bot</title>
+<meta name="description" content="Sirk, a simple, easy to use, Discord Bot made to make your use of discord easy.">
+  <meta name="theme-color" content="#5E6C86">
+  <meta content="https://asksirk.com/Astro/sirk.png" property="og:image">
 </head>
 <body style="font-family: gamefont;">
     <style>
@@ -13,7 +16,6 @@
         src: url('./font2.ttf');
     }
 </style>
-<meta name="description" content="Lite Bot is a multi-functional Discord bot with moderation, fun, welcome messages, reaction roles and more!">
 <style>
     body {
       background-color: #1d2b4b;
