--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -24,8 +24,9 @@
 <body link=white alink=white vlink=white></body>
 <a href="/bot/">Home</a>
 <center>
-    <h2>Commands for Sirk Bot</h2>
-    <br><br><br>
+    <h2>Commands for Sirk Bot - (WIP)</h2>
+    <br>
+    <br><br>
 <table>
     <tr>
       <th>Command</th>
@@ -63,7 +64,27 @@
         <td>vote</td>
         <td>Vote for Sirk in top.gg</td>
     </tr>
-  </table>
+    <tr>
+        <td>avatar</td>
+        <td>Get the avatar of the mentioned member.</td>
+    </tr>
+    <tr>
+        <td>ping</td>
+        <td>Get the bot ping.</td>
+    </tr>
+    <tr>
+        <td>server</td>
+        <td>Get information about the server.</td>
+    </tr>
+    <tr>
+        <td>stats</td>
+        <td>Get the bot stats.</td>
+    </tr>
+    <tr>
+        <td>user</td>
+        <td>Get information about the mentioned user.</td>
+    </tr>
+</table>
 </center>
 </body>
 </html>
