--- a/bot/index.html
+++ b/bot/index.html
@@ -28,6 +28,7 @@
 <br><br>
 <h3><a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&scope=bot">Invite</a></h3>
 <h3><a href="commands/">Commands<a></h3>
+<h3><a href="https://discord.gg/7yZqHfG">Support Server</a></h3>
 </center>
 </body>
 </html>
