--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" 
     type="image/png" 
     href="/img/sirk.png">
-<title>Sirk Bot</title>
+<title>Sirk Bot | Commands</title>
 <meta name="description" content="A minimalistic bot for discord">
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/sirk.png" property="og:image">
