--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="bluemask1.png">
-<title>ISIRK</title>
+    href="/img/sirk.png">
+<title>isirk</title>
+<meta name="description" content="A minimalistic bot for discord">
+  <meta name="theme-color" content="#4D5B71">
+  <meta content="/img/sirk.png" property="og:image">
 </head>
-<body style="font-family: gamefont;">
-    <style>
-        @font-face {
-        font-family: 'gamefont';
-        src: url('./font2.ttf');
-    }
-</style>
+<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></style>
 <style>
     body {
       background-color: #1d2b4b;
     }
-  </style>
-<style>
     body {
         color: white;
     }
-    </style>
+    a:hover {
+        color: #7289DA; }
+</style>
 <body link=white alink=white vlink=white></body>
-<h2><img src="isirkterminal.gif" height="30" width="30">ISIRK<a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
-<br>
-<h3><a href="/Astro/">Astro Bot</a></h3>
-<h3><a href="/about/">About Me<a></h3>
+<center>
+    <br><br>
+<img src="/img/isirk.gif" height="200" width="200">
+<br><br>
+<h2>WIP Please go to <a href="/bot/">this page</a> for more.</h2>
+</center>
 </body>
 </html>
