--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -5,7 +5,7 @@
     type="image/png" 
     href="/img/sirk.png">
 <title>Sirk Bot | Commands</title>
-<meta name="description" content="A minimalistic bot for discord">
+<meta name="description" content="Sirk Bot - Commands">
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/sirk.png" property="og:image">
 </head>
