--- a/bot/privacy/index.html
+++ b/bot/privacy/index.html
@@ -17,7 +17,6 @@
     body {
         color: white;
     }
-    a { text-decoration: none; }
     a:hover {
         color: #7289DA; }
 </style>
@@ -35,7 +34,7 @@
     <h3>Who gets this data?</h3>
     We do not share any data with any third-party sources or publicly present your data.
     <h3>Questions and Concerns:</h3>
-    If you have any questions or concerns you can either email us or you can join our support server.
+    If you have any questions or concerns you can either <a href="mailto:isirk@asksirk.com">email</a> us or you can join our <a href="https://discord.gg/7yZqHfG">support server</a>.
     <h3>How to remove your data:</h3>
     If you wish to remove your data you can either contact us by the means above, or you can remove Sirk Bot from your server. This will thoroughly remove all data.
     <br><br>
