--- a/bot/privacy/index.html
+++ b/bot/privacy/index.html
@@ -21,7 +21,7 @@
         color: #7289DA; }
 </style>
 <body link=white alink=white vlink=white></body>
-<a href="/bot/index.html"style="text-decoration: none">Back</a>
+<a href="/bot/"style="text-decoration: none">Back</a>
 <h2>Privacy Policy for Sirk Bot</h2>
 <p><h3>What is stored?</h3>
     - Songs<br>
