--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     type="image/png" 
     href="/img/sirk.png">
 <title>isirk</title>
-<meta name="description" content="A minimalistic bot for discord">
+<meta name="description" content="isirk's site!">
   <meta name="theme-color" content="#4D5B71">
-  <meta content="/img/sirk.png" property="og:image">
+  <meta content="/img/isirk.gif" property="og:image">
 </head>
 <body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></style>
 <style>
