--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -17,9 +17,28 @@
     body {
         color: white;
     }
+    table {
+        border-collapse: collapse;
+    }
     a { text-decoration: none; }
     a:hover {
         color: #7289DA; }
+    tr:nth-child(odd) {
+        background-color: #18233d;
+    }
+    th, td {
+        padding: 1em 1.5em;
+    }
+    tr:nth-child(odd) > * > code {
+        background-color:  #1d2b4b;
+        padding: 3px 6px;
+        border-radius: 3px;
+    }
+    tr:nth-child(even) > * > code {
+        background-color:  #18233d;
+        padding: 3px 6px;
+        border-radius: 3px;
+    }
 </style>
 <body link=white alink=white vlink=white></body>
 <a href="/bot/">Home</a>
@@ -33,55 +52,55 @@
       <th>Info</th>
     </tr>
     <tr>
-      <td>help</td>
+      <td><code>help</code></td>
       <td>Get a list of all the commands and see how to use them.</td>
     </tr>
     <tr>
-      <td>about</td>
+      <td><code>about</code></td>
       <td>Get information about the bot.</td>
     </tr>
     <tr>
-        <td>credits</td>
+        <td><code>credits</code></td>
         <td>See the credits for Sirk.</td>
       </tr>
     <tr>
-        <td>invite</td>
+        <td><code>invite</code></td>
         <td>Get the invite link for Sirk.</td>
     </tr>
     <tr>
-        <td>privacy</td>
+        <td><code>privacy</code></td>
         <td>See the bots privacy policy.</td>
     </tr>
     <tr>
-        <td>source</td>
+        <td><code>source</code></td>
         <td>See the bots source.</td>
     </tr>
     <tr>
-        <td>support</td>
+        <td><code>support</code></td>
         <td>Get support information.</td>
     </tr>
     <tr>
-        <td>vote</td>
+        <td><code>vote</code></td>
         <td>Vote for Sirk in top.gg</td>
     </tr>
     <tr>
-        <td>avatar</td>
+        <td><code>avatar</code></td>
         <td>Get the avatar of the mentioned member.</td>
     </tr>
     <tr>
-        <td>ping</td>
+        <td><code>ping</code></td>
         <td>Get the bot ping.</td>
     </tr>
     <tr>
-        <td>server</td>
+        <td><code>server</code></td>
         <td>Get information about the server.</td>
     </tr>
     <tr>
-        <td>stats</td>
+        <td><code>stats</code></td>
         <td>Get the bot stats.</td>
     </tr>
     <tr>
-        <td>user</td>
+        <td><code>user</code></td>
         <td>Get information about the mentioned user.</td>
     </tr>
 </table>
