--- a/bot/privacy/index.html
+++ b/bot/privacy/index.html
@@ -33,7 +33,7 @@
     }
 </style>
 <body link=white alink=white vlink=white></body>
-<a href="/bot/index.html">< Back</a>
+<a href="/bot/index.html">Home</a>
 <div>
     <div class="center">
         <h1>Privacy Policy for Sirk Bot</h1>
