--- a/bot/index.html
+++ b/bot/index.html
@@ -72,8 +72,8 @@ body {
   <a href="/bot/" class="logo"><img src="https://asksirk.com/img/sirk.png" height="40" width="40"></a>
   <div class="header-right">
     <a class="active" href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&scope=bot">Invite</a>
-    <a href="/commands/">Commands</a>
-    <a href="/privacy/">Privacy</a>
+    <a href="/bot/commands/">Commands</a>
+    <a href="/bot/privacy/">Privacy</a>
   </div>
 </div>
 </body>
