--- a/bot/index.html
+++ b/bot/index.html
@@ -20,22 +20,22 @@ body {
 .header {
   overflow: hidden;
   background-color: #f1f1f1;
-  padding: 20px 10px;
+  padding: 5px 5px;
 }
 
 .header a {
   float: left;
   color: black;
   text-align: center;
-  padding: 12px;
+  padding: 10px;
   text-decoration: none;
   font-size: 18px; 
   line-height: 25px;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
 .header a.logo {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -72,8 +72,8 @@ body {
   <a href="/bot/" class="logo"><img src="https://asksirk.com/img/sirk.png" height="40" width="40"></a>
   <div class="header-right">
     <a class="active" href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&scope=bot">Invite</a>
-    <a href="/bot/commands/">Commands</a>
-    <a href="/bot/privacy/">Privacy</a>
+    <a href="/commands/">Commands</a>
+    <a href="/privacy/">Privacy</a>
   </div>
 </div>
 </body>
