--- a/bot/privacy/index.html
+++ b/bot/privacy/index.html
@@ -4,19 +4,75 @@
     <link rel="icon" 
     type="image/png" 
     href="/img/sirk.png">
-<title>Sirk Bot | Privacy Policy</title>
-<meta name="description" content="Sirk Bot - Priavcy Policy">
+<title>Sirk Bot | Commands</title>
+<meta name="description" content="Sirk Bot - Commands">
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/sirk.png" property="og:image">
-</head>
-<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></style>
 <style>
+* {box-sizing: border-box;}
+    body { 
+      margin: 0;
+      font-family: Roboto;
+    }
     body {
       background-color: #1d2b4b;
     }
     body {
         color: white;
     }
+    a:hover {
+        color: #7289DA; }
+body {
+        color: white;
+    }
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 5px 5px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 5px;
+}
+
+.header a.logo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+}
     a:hover {
         color: #7289DA; }
     
@@ -33,7 +89,14 @@
     }
 </style>
 <body link=white alink=white vlink=white></body>
-<a href="/bot/" style="text-decoration: none;">Home</a>
+<div class="header">
+  <a href="/bot/" class="logo"><img src="https://asksirk.com/img/sirk.png" height="40" width="40"></a>
+  <div class="header-right">
+    <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&scope=bot">Invite</a>
+    <a href="/bot/commands/">Commands</a>
+    <a class="active" href="/bot/privacy/">Privacy</a>
+  </div>
+</div>
 <div>
     <div class="center">
         <h1>Privacy Policy for Sirk Bot</h1>
