--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
     }
     a:hover {
         color: #7289DA; }
+    a { text-decoration: none; }
+    a:hover {
+        color: #7289DA; }
 </style>
-<body link=white alink=white vlink=white></body>
+<body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
     <br><br>
 <img src="/img/isirk.gif" height="200" width="200">
 <br><br>
-<h2>WIP Please go to <a href="/bot/">this page</a> for more.</h2>
+<h2>Hi! I'm isirk</h2>
+<p>I make <a href="/bot/">discord bots</a> and play video games.</p>
 </center>
 </body>
 </html>
