--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -35,9 +35,9 @@
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a href="/bot/"><li>Home</li></a>
+      <a href="/"><li>Home</li></a>
       <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&scope=bot"><li>Invite</li></a>
-      <a href="/bot/commands/"><li>Commands</li></a>
+      <a href="/bot/"><li>Back</li></a>
       <a href="/bot/privacy/"><li>Privacy Policy</li></a>
     </ul>
   </div>
