--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <ul id="menu">
         <a href="/bot/"><li>Sirk Bot</li></a>
         <a href="https://discord.gg/7yZqHfG"><li>Discord Server</li></a>
+        <a href="https://www.youtube.com/channel/UCZWDs9HQ_UtzDCFlWg9jrzQ"><li>Youtube Channel</li></a>
         <a href="https://github.com/ISIRK"><li>Github Profile</li></a>
       </ul>
     </div>
