--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       -->
       <ul id="menu">
         <a href="/bot/"><li>Sirk Bot</li></a>
-        <a href="https://discord.gg/7yZqHfG"><li>Discord Server</li></a>
-        <a href="https://www.youtube.com/channel/UCZWDs9HQ_UtzDCFlWg9jrzQ"><li>Youtube Channel</li></a>
-        <a href="https://github.com/ISIRK"><li>Github Profile</li></a>
+        <a href="https://discord.gg/7yZqHfG"><li>Discord</li></a>
+        <a href="https://www.youtube.com/channel/UCZWDs9HQ_UtzDCFlWg9jrzQ"><li>Youtube</li></a>
+        <a href="https://github.com/ISIRK"><li>Github</li></a>
       </ul>
     </div>
   </nav>
