--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="/img/sirk.png">
+    href="/img/isirk.gif">
 <title>isirk</title>
 <meta name="description" content="isirk's site!">
   <meta name="theme-color" content="#4D5B71">
