--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" 
-    type="image/png" 
+    type="image/gif" 
     href="/img/isirk.gif">
 <title>isirk</title>
 <meta name="description" content="isirk's site!">
