--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
     img {
       border-radius: 50%;
     }
+    @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+    p {
+      white-space: nowrap;
+      overflow: hidden;    
+      font-family: 'Source Code Pro', monospace;  
+      font-size: 28px;
+      color: rgba(255,255,255,.70);
+    }
+
+    /* Animation */
+    p {
+      animation: animated-text 2s steps(30,end) 1s 1 normal both;
+    }
+
+    /* text animation */
+
+    @keyframes animated-text{
+      from{width: 0;}
+      to{width: 472px;}
+    }
 </style>
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
