--- a/index.html
+++ b/index.html
@@ -75,19 +75,6 @@
     }
     img {
       border-radius: 50%;
-    /* Animation */
-    .anim-typewriter{
-      animation: typewriter 4s steps(44) 1s 1 normal both,
-                 blinkTextCursor 500ms steps(44) infinite normal;
-    }
-    @keyframes typewriter{
-      from{width: 0;}
-      to{width: 24em;}
-    }
-    @keyframes blinkTextCursor{
-      from{border-right-color: rgba(255,255,255,.75);}
-      to{border-right-color: transparent;}
-    }
 </style>
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
@@ -95,7 +82,7 @@
 <img src="/img/isirk.gif" height="200" width="200">
 <br><br>
 <h2>Hi! I'm isirk</h2>
-<p class="line-1 anim-typewriter">I make <a href="/bot/">discord bots</a> and play video games.</p>
+<p>I make <a href="/bot/">discord bots</a> and play video games.</p>
 </center>
 </body>
 </html>
