--- a/christmas/index.html
+++ b/christmas/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" 
+    type="image/gif" 
+    href="/img/hat.png">
+<title>Christmas Challenge</title>
 <script>console.log('Nice Job!');</script>
 <script>console.log('Now for the second challenge go to this page:');</script>
 <script>console.log('https://asksirk.com/christmas/present.html');</script>
