--- a/christmas/present.html
+++ b/christmas/present.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" 
+    type="image/gif" 
+    href="/img/present.png">
+<title>Christmas Challenge</title>
 <body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></style>
 <style>
     body {
