--- a/christmas/error.html
+++ b/christmas/error.html
@@ -16,6 +16,6 @@
 <center>
 <br><br><br><br><br>
 <h1>Not Quite</h1>
-<h3><a href="/doors.html/">Click here to go back</a></h3>
+<h3><a href="doors.html">Click here to go back</a></h3>
 </center>
 </html>
