--- a/christmas/present.html
+++ b/christmas/present.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 <h2>Now it's time for the next challenge.</h2>
-<h3>Next Challenge: You need to find the hidden <a href="final.html">link</a></h3>
+<h3>Next Challenge: You need to find the hidden <a href="doors.html">link</a></h3>
 </center>
 </body>
 </html>
