--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       but hey, it's pure CSS magic.
       -->
       <ul id="menu">
+        <a href="/christmas/"><li>Christmas</li></a>
         <a href="/bot/"><li>Sirk Bot</li></a>
         <a href="https://discord.gg/7yZqHfG"><li>Discord</li></a>
         <a href="https://www.youtube.com/channel/UCZWDs9HQ_UtzDCFlWg9jrzQ"><li>Youtube</li></a>
