--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     type="image/gif" 
     href="/img/isirk.gif">
 <title>isirk</title>
+<script>console.log('Hey there! Seems like your poking around. If you want to see the source code for this website, check out the github repo (below).');</script>
+<script>console.log('https://github.com/isirk/isirk.github.io');</script>
 <meta name="description" content="isirk's site!">
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/isirk.gif" property="og:image">
