--- a/christmas/cud.html
+++ b/christmas/cud.html
@@ -50,7 +50,7 @@ var x = setInterval(function() {
 <body link=white alink=white vlink=white></body>
 </head>
 <body>
-<h3><a href="/">Back</a></h3>
+<h3><a href="/christmas/">Back</a></h3>
 <center>
 <br><br><br>
 <img src="/img/tree.png" height=200>
