--- a/christmas/index.html
+++ b/christmas/index.html
@@ -20,7 +20,7 @@
 <br><br><br>
 <img src="/img/decor.png" height="200" width="200">
 <h1>Merry Christmas</h1>
-<h3><a href="challenge.html>Christmas Challenge</a></h3>
-<h3><a href="cud.html>Christmas Countdown</a></h3>
+<h3><a href="challenge.html">Christmas Challenge</a></h3>
+<h3><a href="cud.html">Christmas Countdown</a></h3>
 </center>
 </html>
