--- a/christmas/final.html
+++ b/christmas/final.html
@@ -29,6 +29,7 @@
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 </head>
 <body>
+<h3><a href="/christmas/">Back</a></h3>
 <center>
 <br><br><br>
 <img src="/img/hat.png" height="200" width="200">
