--- a/christmas/index.html
+++ b/christmas/index.html
@@ -31,7 +31,7 @@
       but hey, it's pure CSS magic.
       -->
       <ul id="menu">
-        <a href="/"><li>Back</li></a>
+        <a href="/"><li>Home</li></a>
         <a href="challenge.html"><li>Christmas Challenge</li></a>
         <a href="cud.html"><li>Christmas Countdown</li></a>
       </ul>
