--- a/christmas/challenge.html
+++ b/christmas/challenge.html
@@ -28,7 +28,7 @@
 <p>
     You found me! Good Job! Next, check the console!
 </p>
-<h1>Merry Christmas</h1>
+<h1>Christmas Needs You!</h1>
 <h3>Your task is to complete a series of challenges.</h3>
 <h3>First Challenge: Find the hidden text on this page that will lead you to the next clue.</h3>
 </center>
