--- a/christmas/final.html
+++ b/christmas/final.html
@@ -26,7 +26,7 @@
         color: #1d2b4b; }
     p { text-decoration: none; }
 </style>
-<body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
+<body link=white alink=white vlink=white></body>
 </head>
 <body>
 <h3><a href="/christmas/">Back</a></h3>
