--- a/christmas/index.html
+++ b/christmas/index.html
@@ -5,6 +5,9 @@
     type="image/gif" 
     href="/img/decor.png">
 <title>Christmas!</title>
+<audio autoplay loop>
+     <source src="/img/xmas-music.mp3">
+</audio>
 <link rel="stylesheet" href="/bot/menu.css">
   </head>
   <!--    Made by Erik Terwan Edited by isirk#0001  -->
