--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <script>console.log('https://github.com/isirk/isirk.github.io');</script>
 <meta name="description" content="isirk's site!">
   <meta name="theme-color" content="#4D5B71">
-  <meta content="https://asksirk.com/img/isirk.gif" property="og:image">
+  <meta content="/img/isirk.gif" property="og:image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://asksirk.com/bot/menu.css">
+  <link rel="stylesheet" href="/bot/menu.css">
   </head>
   <!--    Made by Erik Terwan Edited by isirk#0001  -->
   <nav role="navigation">
@@ -116,7 +116,7 @@
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
     <br><br>
-<img src="https://asksirk.com/img/isirk.gif" height="200" width="200">
+<img src="/img/isirk.gif" height="200" width="200">
 <br><br>
 <h2>Hi! I'm isirk</h2>
 <p>I make <a href="/bot/">discord bots</a> and play video games.</p>
