--- a/bot/index.html
+++ b/bot/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="/img/sirk.png">
+    href="/img/joystick.png">
 <title>Sirk Bot</title>
 <meta name="description" content="A minimalistic bot for discord">
   <meta name="theme-color" content="#4D5B71">
@@ -46,11 +46,14 @@
     a { text-decoration: none; }
     a:hover {
         color: #7289DA; }
+    img {
+      border-radius: 50%;
+    }
 </style>
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
     <br><br>
-<img src="https://asksirk.com/img/sirk.png" height="200" width="200">
+<img src="https://asksirk.com/img/sirk-snow.jpg" height="200" width="200">
 <br><br>
 <h3>A minimalistic bot for discord</h3>
 <h3>Developed by <a href="https://discord.com/users/542405601255489537">isirk#0001</a></h3>
