--- a/bot/index.html
+++ b/bot/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="/img/joystick.png">
+    href="/img/sirk.png">
 <title>Sirk Bot</title>
 <meta name="description" content="A minimalistic bot for discord">
   <meta name="theme-color" content="#4D5B71">
@@ -53,7 +53,7 @@
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
     <br><br>
-<img src="https://asksirk.com/img/sirk-snow.jpg" height="200" width="200">
+<img src="https://asksirk.com/img/sirk-christmas.jpg" height="200" width="200">
 <br><br>
 <h3>A minimalistic bot for discord</h3>
 <h3>Developed by <a href="https://discord.com/users/542405601255489537">isirk#0001</a></h3>
