--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="/img/joystick.png">
+    href="/img/sirk.png">
 <title>Sirk Bot | Commands</title>
 <meta name="description" content="Commands for Sirk Bot">
   <meta name="theme-color" content="#4D5B71">
