--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -5,7 +5,7 @@
     type="image/png" 
     href="/img/sirk.png">
 <title>Sirk Bot | Commands</title>
-<meta name="description" content="Commands for Sirk Bot">
+<meta name="description" content="Sirk Bot's Commands">
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/sirk.png" property="og:image">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,95 +62,11 @@
     a { text-decoration: none; }
     a:hover {
         color: #7289DA; }
-body {
-        color: white;
-    }
-	table {
-        border-collapse: collapse;
-    }
-    a { text-decoration: none; }
-    a:hover {
-        color: #7289DA; }
-    tr:nth-child(odd) {
-        background-color: #18233d;
-    }
-    th, td {
-        padding: 1em 1.5em;
-    }
-    tr:nth-child(odd) > * > code {
-        background-color:  #1d2b4b;
-        padding: 3px 6px;
-        border-radius: 3px;
-    }
-    tr:nth-child(even) > * > code {
-        background-color:  #18233d;
-        padding: 3px 6px;
-        border-radius: 3px;
-    }
 </style>
 </head>
 <center>
-    <h2>Commands for Sirk Bot - (WIP)</h2>
-    <br>
-    <br><br>
-<table>
-    <tr>
-      <th>Command</th>
-      <th>Info</th>
-    </tr>
-    <tr>
-      <td><code>help</code></td>
-      <td>Get a list of all the commands and see how to use them.</td>
-    </tr>
-    <tr>
-      <td><code>about</code></td>
-      <td>Get information about the bot.</td>
-    </tr>
-    <tr>
-        <td><code>credits</code></td>
-        <td>See the credits for Sirk.</td>
-      </tr>
-    <tr>
-        <td><code>invite</code></td>
-        <td>Get the invite link for Sirk.</td>
-    </tr>
-    <tr>
-        <td><code>privacy</code></td>
-        <td>See the bots privacy policy.</td>
-    </tr>
-    <tr>
-        <td><code>source</code></td>
-        <td>See the bots source.</td>
-    </tr>
-    <tr>
-        <td><code>support</code></td>
-        <td>Get support information.</td>
-    </tr>
-    <tr>
-        <td><code>vote</code></td>
-        <td>Vote for Sirk in top.gg</td>
-    </tr>
-    <tr>
-        <td><code>avatar</code></td>
-        <td>Get the avatar of the mentioned member.</td>
-    </tr>
-    <tr>
-        <td><code>ping</code></td>
-        <td>Get the bot ping.</td>
-    </tr>
-    <tr>
-        <td><code>server</code></td>
-        <td>Get information about the server.</td>
-    </tr>
-    <tr>
-        <td><code>stats</code></td>
-        <td>Get the bot stats.</td>
-    </tr>
-    <tr>
-        <td><code>user</code></td>
-        <td>Get information about the mentioned user.</td>
-    </tr>
-</table>
+<img src="/img/sirk.png" height="200" width="200">
+<h2>This page is a work in progress.</h2>
 </center>
 </body>
 </html>
