--- a/bot/index.html
+++ b/bot/index.html
@@ -46,14 +46,11 @@
     a { text-decoration: none; }
     a:hover {
         color: #7289DA; }
-    img {
-      border-radius: 50%;
-    }
 </style>
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
     <br><br>
-<img src="https://asksirk.com/img/sirk-christmas.jpg" height="200" width="200">
+<img src="https://asksirk.com/img/sirk.png" height="200" width="200">
 <br><br>
 <h3>A minimalistic bot for discord</h3>
 <h3>Developed by <a href="https://discord.com/users/542405601255489537">isirk#0001</a></h3>
