--- a/bot/privacy/index.html
+++ b/bot/privacy/index.html
@@ -4,8 +4,8 @@
     <link rel="icon" 
     type="image/png" 
     href="/img/sirk.png">
-<title>Sirk Bot | Commands</title>
-<meta name="description" content="Commands for Sirk Bot">
+<title>Sirk Bot | Privacy</title>
+<meta name="description" content="Privacy Policy for Sirk Bot">
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/sirk.png" property="og:image">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,14 +64,12 @@
 <body link=white alink=white vlink=white></body>
 <div>
     <div class="center">
-        <h1>Privacy Policy for Sirk Bot</h1>
+        <h1>Privacy Policy</h1>
         <h3>What is stored?</h3>
         <ul>
-            <li>Songs</li>
-            <li>User ID's</li>
-            <li>Guild ID's</li>
+            <li>IDs</li>
         </ul>
-        <h3>Why it is stored?</h3>
+        <h3>Why are IDs stored?</h3>
         <div class="answer">We store data to make your use of Sirk Bot more easy and reliable for the next time of use and to see that everything worked.</div>
         <h3>Why we need the data we store:</h3>
         <div class="answer">We need the data we store so that Sirk Bot can work and can function properly.<br>If Sirk Bot does not store data then the commands will not function and it will not work as a whole.</div>
@@ -81,7 +79,7 @@
         <div class="answer">If you have any questions or concerns you can either <a href="mailto:isirk@asksirk.com">email</a> us or you can join our <a href="https://discord.gg/7yZqHfG">support server</a>.</div>
         <h3>How to remove your data:</h3>
         <div class="answer">If you wish to remove your data you can either contact us by the means above, or you can remove Sirk Bot from your server. This will thoroughly remove all data.</div>
-        <p>Updated 11/18/2020</p>
+        <p>Updated 1/27/2021</p>
     </div>
 </div>
 </body>
