Working on Commands Page

--- a/bot/index.html
+++ b/bot/index.html
@@ -35,7 +35,7 @@
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a href="/"><li>Home</li></a>
+      <a href="/bot/"><li>Home</li></a>
       <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=805694678&scope=bot"><li>Invite</li></a>
       <a href="/bot/commands/"><li>Commands</li></a>
       <a href="/bot/privacy/"><li>Privacy Policy</li></a>
@@ -52,6 +52,7 @@
     <br><br>
 <img src="https://asksirk.com/img/sirk.png" height="200" width="200">
 <br><br>
+<h2>Sirk Bot</h2>
 <h3>A minimalistic bot for discord</h3>
 <h3>Developed by <a href="https://discord.com/users/542405601255489537">isirk#0001</a></h3>
   <br>
