--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -35,38 +35,110 @@
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a href="/"><li>Home</li></a>
-      <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&scope=bot"><li>Invite</li></a>
-      <a href="/bot/"><li>Back</li></a>
+      <a href="/bot/"><li>Home</li></a>
+      <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=805694678&scope=bot"><li>Invite</li></a>
+      <a href="/bot/commands/"><li>Commands</li></a>
       <a href="/bot/privacy/"><li>Privacy Policy</li></a>
     </ul>
   </div>
 </nav>
 <style>
-    a { text-decoration: none; }
-    a:hover {
-        color: #7289DA; }
+  a { text-decoration: none; }
+  a:hover {
+      color: #7289DA; }
 </style>
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <style>
-    body { 
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-    body {
-      background-color: #1d2b4b;
-    }
-    body {
-        color: white;
-    }
-    a { text-decoration: none; }
-    a:hover {
-        color: #7289DA; }
+  body { 
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  body {
+    background-color: #1d2b4b;
+  }
+  body {
+      color: white;
+  }
+  a { text-decoration: none; }
+  a:hover {
+      color: #7289DA; }
+body {
+      color: white;
+  }
+table {
+      border-collapse: collapse;
+  }
+  a { text-decoration: none; }
+  a:hover {
+      color: #7289DA; }
+  tr:nth-child(odd) {
+      background-color: #18233d;
+  }
+  th, td {
+      padding: 1em 1.5em;
+  }
+  tr:nth-child(odd) > * > code {
+      background-color:  #1d2b4b;
+      padding: 3px 6px;
+      border-radius: 3px;
+  }
+  tr:nth-child(even) > * > code {
+      background-color:  #18233d;
+      padding: 3px 6px;
+      border-radius: 3px;
+  }
 </style>
 </head>
 <center>
-<img src="/img/sirk.png" height="200" width="200">
-<h2>This page is a work in progress.</h2>
+  <img src="https://asksirk.com/img/sirk.png" height="200" width="200">
+  <br>
+  <h2>Commands for Sirk Bot</h2>
+  <h3>This page is a work in progress</h3>
+  <br>
+  <h3>Modules:</h3>
+  <h4>
+    <a href="#Untitled">• Untitled</a>
+    <br><br>
+    <a href="#Meta">• Meta</a>
+  </h4>
+  <br>
+<h2 id="Untitled">Untitled Commands</h2>
+<table>
+  <tr>
+    <th>Command</th>
+    <th>Info</th>
+    <th>Usage</th>
+  </tr>
+  <tr>
+    <td><code>test</code></td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+    <td>Usage</td>
+  </tr>
+  <tr>
+    <td><code>test</code></td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+    <td>Usage</td>
+  </tr>
+</table>
+<br><br>
+<h2 id="Meta">Meta Commands</h2>
+<table>
+  <tr>
+    <th>Command</th>
+    <th>Info</th>
+    <th>Usage</th>
+  </tr>
+  <tr>
+    <td><code>test</code></td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+    <td>Usage</td>
+  </tr>
+  <tr>
+    <td><code>test</code></td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+    <td>Usage</td>
+  </tr>
+</table>
 </center>
 </body>
 </html>
