--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -97,12 +97,12 @@ table {
   <br>
   <h3>Modules:</h3>
   <h4>
-    <a href="#Untitled">• Untitled</a>
-    <br><br>
     <a href="#Meta">• Meta</a>
+    <br><br>
+    <a href="#Untitled">• Untitled</a>
   </h4>
   <br>
-<h2 id="Untitled">Untitled Commands</h2>
+<h2 id="Meta">Meta Commands</h2>
 <table>
   <tr>
     <th>Command</th>
