--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -99,7 +99,7 @@ table {
   <h4>
     <a href="#Meta">• Meta</a>
     <br><br>
-    <a href="#Untitled">• Untitled</a>
+    <a href="#Mod">• Mod</a>
   </h4>
   <br>
 <h2 id="Meta">Meta Commands</h2>
@@ -121,7 +121,7 @@ table {
   </tr>
 </table>
 <br><br>
-<h2 id="Meta">Meta Commands</h2>
+<h2 id="Mod">Mod Commands</h2>
 <table>
   <tr>
     <th>Command</th>
