--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -94,6 +94,10 @@ table {
   <br>
   <h2>Commands for Sirk Bot</h2>
   <h3>This page is a work in progress</h3>
+  <h3>
+      [] = Optional
+      <> = Required
+      | = Alias
   <br>
   <h3>Modules:</h3>
   <h4>
@@ -110,14 +114,19 @@ table {
     <th>Usage</th>
   </tr>
   <tr>
-    <td><code>test</code></td>
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-    <td>Usage</td>
+    <td><code>help</code></td>
+    <td>Shows help about the bot, a command, or a category</td>
+    <td>help [command]</td>
   </tr>
   <tr>
-    <td><code>test</code></td>
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-    <td>Usage</td>
+    <td><code>stats</code></td>
+    <td>Get statistics about the bot</td>
+    <td>stats</td>
+  </tr>
+  <tr>
+    <td><code>about</code></td>
+    <td>Displays bot info</td>
+    <td>about | info</td>
   </tr>
 </table>
 <br><br>
