--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -128,6 +128,66 @@ table {
     <td>Displays bot info</td>
     <td>about | info</td>
   </tr>
+  <tr>
+    <td><code>credits</code></td>
+    <td>See the credits for Sirk</td>
+    <td>credits</td>
+  </tr>
+  <tr>
+    <td><code>vote</code></td>
+    <td>Vote for Sirk</td>
+    <td>vote</td>
+  </tr>
+  <tr>
+    <td><code>support</code></td>
+    <td>Get support information</td>
+    <td>support</td>
+  </tr>
+  <tr>
+    <td><code>invite</code></td>
+    <td>Get the invite link</td>
+    <td>invite</td>
+  </tr>
+  <tr>
+    <td><code>privacy</code></td>
+    <td>See the privacy policy</td>
+    <td>privacy</td>
+  </tr>
+  <tr>
+    <td><code>donate</code></td>
+    <td>Donate!</td>
+    <td>donate</td>
+  </tr>
+  <tr>
+    <td><code>ping</code></td>
+    <td>See the bot latency</td>
+    <td>ping</td>
+  </tr>
+  <tr>
+    <td><code>uptime</code></td>
+    <td>Displays the bot uptime</td>
+    <td>ping</td>
+  </tr>
+  <tr>
+    <td><code>server</code></td>
+    <td>Get information about the server</td>
+    <td>server</td>
+  </tr>
+  <tr>
+    <td><code>user</code></td>
+    <td>Get information about the mentioned user</td>
+    <td>user | ui | whois [user]</td>
+  </tr>
+  <tr>
+    <td><code>avatar</code></td>
+    <td>Get the avatar of the mentioned user</td>
+    <td>avatar | av [user]</td>
+  </tr>
+  <tr>
+    <td><code>perms</code></td>
+    <td>See the permissions for a user</td>
+    <td>perms [user]</td>
+  </tr>
 </table>
 <br><br>
 <h2 id="Mod">Mod Commands</h2>
