--- a/404.html
+++ b/404.html
@@ -7,16 +7,14 @@
 <title>404 Not Found</title>
 <style>
     body {
-      background-color: #1d2b4b;
-    }
-    body {
+        background-color: #1d2b4b;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         color: white;
     }
-    a:hover {
-        color: #7289DA; }
-    a { text-decoration: none; }
-    a:hover {
-        color: #7289DA; }
+    a {
+        color: #7289DA;
+        text-decoration: none; 
+    }
   </style>
 <center>
 <br><br><br><br>
