--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -198,14 +198,39 @@ table {
     <th>Usage</th>
   </tr>
   <tr>
-    <td><code>test</code></td>
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-    <td>Usage</td>
+    <td><code>kick</code></td>
+    <td>Kicks a user from the server</td>
+    <td>kick <user></td>
   </tr>
   <tr>
-    <td><code>test</code></td>
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-    <td>Usage</td>
+    <td><code>ban</code></td>
+    <td>Bans a user from the server</td>
+    <td>ban <user></td>
+  </tr>
+  <tr>
+    <td><code>unban</code></td>
+    <td>Unbans a user</td>
+    <td>unban <user></td>
+  </tr>
+  <tr>
+    <td><code>clear</code></td>
+    <td>Clear a specified amount of images</td>
+    <td>clear <number></td>
+  </tr>
+  <tr>
+    <td><code>slowmode</code></td>
+    <td>Change the slowmode for the current channel</td>
+    <td>slowmode <seconds></td>
+  </tr>
+  <tr>
+    <td><code>warn</code></td>
+    <td>Warn a member</td>
+    <td>warn <user></td>
+  </tr>
+  <tr>
+    <td><code>embed</code></td>
+    <td>Make a custom embed</td>
+    <td>embed {}</td>
   </tr>
 </table>
 </center>
