--- a/bot/commands/index.html
+++ b/bot/commands/index.html
@@ -104,6 +104,8 @@ table {
     <a href="#Meta">• Meta</a>
     <br><br>
     <a href="#Mod">• Mod</a>
+    <br><br>
+    <a href="#Config">• Config</a>
   </h4>
   <br>
 <h2 id="Meta">Meta Commands</h2>
@@ -231,6 +233,20 @@ table {
     <td><code>embed</code></td>
     <td>Make a custom embed</td>
     <td>embed {}</td>
+  </tr>
+</table>
+<br><br>
+<h2 id="Config">Configuration Commands</h2>
+<table>
+  <tr>
+    <th>Command</th>
+    <th>Info</th>
+    <th>Usage</th>
+  </tr>
+  <tr>
+    <td><code>test</code></td>
+    <td>desc</td>
+    <td>usage</td>
   </tr>
 </table>
 </center>
