--- a/goa/index.html
+++ b/goa/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
+<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></style>
+    <style>
+            body {
+              background-color: #E5E9F0;
+            }
+            body {
+                color: #5E81AC;
+            }
+            a {
+                color: #7289DA; }
+            a { text-decoration: none; }
+</style>
 <body>
-Advertisment
+<center>
+<br>
+<img src="/img/goa.png" height=200>
+<h1>The Game of Animals</h1>
+<h2>A game about <a href="https://random.dog/">animals</a></h2>
+<br><br>
+<h3>"The best game you'll ever play!"<br>-Maya H.</h3>
+<h3>"A stunning study material!"<br>-Jose M.</h3>
+</h3>
+</center>
 </body>
 </html>
