--- a/goa/index.html
+++ b/goa/index.html
@@ -16,12 +16,12 @@
 <center>
 <br>
 <img src="/img/goa.png" height=200>
-<h1>The Game of Animals</h1>
 <h2>A game about <a href="https://random.dog/">animals</a></h2>
 <br><br>
 <h3>"The best game you'll ever play!"<br>-Maya H.</h3>
-<h3>"A stunning study material!"<br>-Jose M.</h3>
-</h3>
+<h3>"A stunning study material!"<br>-Jose M. </h3>
+<br><br><br><br>
+<p>Copyright © 2021 The Game of Animals</p>
 </center>
 </body>
 </html>
