--- a/goa/index.html
+++ b/goa/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="icon" 
+    type="image/png" 
+    href="/img/goa.png">
+<title>The Game of Animals</title>
 <body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"></style>
     <style>
             body {
