--- a/goa/index.html
+++ b/goa/index.html
@@ -21,7 +21,7 @@
 <center>
 <br>
 <img src="/img/goa.png" height=200>
-<h2>A game about <a href="https://random.dog/">animals</a></h2>
+<h2>A game about <a href="https://random.dog/" target="_blank" rel="noopener noreferrer">animals</a></h2>
 <br><br>
 <h3>"The best game you'll ever play!"<br>-Maya H.</h3>
 <h3>"A stunning study material!"<br>-Jose M. </h3>
