--- a/goa/index.html
+++ b/goa/index.html
@@ -20,7 +20,7 @@
 <body>
 <center>
 <br>
-<a href="https://www.youtube.com/watch?v=TQwmME2SI9E" target="_blank" rel="noopener noreferrer"<img src="/img/goa.png" height=200></a>
+<a href="https://www.youtube.com/watch?v=TQwmME2SI9E" target="_blank" rel="noopener noreferrer"><img src="/img/goa.png" height=200></a>
 <h2>A game about <a href="https://random.dog/" target="_blank" rel="noopener noreferrer">animals</a></h2>
 <br><br>
 <h3>"The best game you'll ever play!"<br>-Maya H.</h3>
