--- a/goa/index.html
+++ b/goa/index.html
@@ -25,6 +25,7 @@
 <br><br>
 <h3>"The best game you'll ever play!"<br>-Maya H.</h3>
 <h3>"A stunning study material!"<br>-Jose M. </h3>
+<h3>"A real classic!"<br>-Lukas Z.</h3>
 <br><br><br><br>
 <p>Copyright © 2021 The Game of Animals</p>
 </center>
