--- a/robosirk/index.html
+++ b/robosirk/index.html
@@ -5,7 +5,7 @@
 <title>RoboSirk</title>
 <meta name="description" content="A simple custom commands bot">
 <meta name="theme-color" content="#B8E0FF">
-<meta content="/img/robosirk.jpg" property="og:image">
+<meta content="img/robosirk.jpg" property="og:image">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/bot/menu.css">
 </head>
