--- a/sirk/index.html
+++ b/sirk/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="/img/sirk.png">
-<title>RoboSirk</title>
+<title>Sirk</title>
 <meta name="description" content="A simple custom commands bot">
 <meta name="theme-color" content="#B8E0FF">
 <meta content="/img/sirk.jpg" property="og:image">
@@ -43,13 +43,14 @@
     a { text-decoration: none; }
     a:hover {
         color: #7289DA; }
+    img { border-radius: 50%; }
 </style>
 <body link=dodgerblue alink=dodgerblue vlink=dodgerblue></body>
 <center>
     <br><br>
-<img src="/img/sirk.png" height="200" width="200">
+<img src="/img/sirk.jpg" height="200" width="200">
 <br><br>
-<h2>RoboSirk</h2>
+<h2>Sirk</h2>
 <h3>A simple custom commands bot</h3>
 <h3>Developed by <a href="https://discord.com/users/542405601255489537">isirk#0001</a></h3>
   <br>
