--- a/sirk/index.html
+++ b/sirk/index.html
@@ -7,7 +7,7 @@
 <meta name="theme-color" content="#B8E0FF">
 <meta content="/img/sirk.jpg" property="og:image">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/bot/menu.css">
+<link rel="stylesheet" href="/menu.css">
 </head>
 <!--    Made by Erik Terwan Edited by isirk#0001  -->
 <nav role="navigation">
