--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#4D5B71">
   <meta content="/img/isirk.gif" property="og:image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/bot/menu.css">
+  <link rel="stylesheet" href="/menu.css">
   </head>
   <!--    Made by Erik Terwan Edited by isirk#0001  -->
   <nav role="navigation">
