--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
       but hey, it's pure CSS magic.
       -->
       <ul id="menu">
-        <a href="/snake/"><li>Snake</li></a>
-        <a href="/bot/"><li>Sirk Bot</li></a>
+        <a href="/sirk/"><li>Sirk</li></a>
         <a href="https://discord.gg/7yZqHfG"><li>Discord</li></a>
         <a href="https://www.youtube.com/channel/UCZWDs9HQ_UtzDCFlWg9jrzQ"><li>Youtube</li></a>
-        <a href="https://github.com/ISIRK"><li>Github</li></a>
+        <a href="https://github.com/isirk"><li>Github</li></a>
       </ul>
     </div>
   </nav>
