--- a/sirk/index.html
+++ b/sirk/index.html
@@ -33,7 +33,7 @@
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a href="/sirk/"><li>Home</li></a>
+      <a href="/"><li>Home</li></a>
       <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=2147846208&scope=bot"><li>Invite</li></a>
       <a href="/sirk/privacy/"><li>Privacy Policy</li></a>
     </ul>
