--- a/sirk/privacy/index.html
+++ b/sirk/privacy/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="/img/sirk.png">
-<title>Sirktle>
+<title>Sirk</title>
 <meta name="description" content="A simple custom commands bot">
 <meta name="theme-color" content="#B8E0FF">
 <meta content="/img/sirk.jpg" property="og:image">
