--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <img src="/img/isirk.gif" height="200" width="200">
 <br><br>
 <h2>Hi! I'm isirk</h2>
-<p>I make <a href="/bot/">discord bots</a> and play video games.</p>
+<p>I develop bugs in Java and Python and sweat at minecraft</p>
 </center>
 </body>
 </html>
